# OpenCore

./: CMakeLists.txt  LICENSE  README.md  init.bat
include/: OpenCore.hpp
include/Asset/: MapLoader.hpp  PackageManager.hpp  ResourceManager.hpp  TextureLoader.hpp
include/Core/: GameInfo.hpp  Macros.hpp
include/Core/Event/: ControllerManager.hpp  EventManager.hpp
include/Core/Helpers/: Debugger.hpp
include/Core/Info/: GameInfo.hpp  GraphicsInfo.hpp  ResourceInfo.hpp
include/Core/Math/: OpenCore_Color.hpp  OpenCore_Rect.hpp  OpenCore_Spiral.hpp  OpenCore_Vec2.hpp  OpenCore_Wave.hpp  SineWave.hpp  WaveBase.hpp
include/Core/Thread/: ThreadManager.hpp
include/OpenCore/: OpenCore.hpp
include/OpenCore/Asset/: MapLoader.hpp  ResourceManager.hpp  SoundLoader.hpp  TextureLoader.hpp
notes/: 游戏资源包 Package系统.md
src/: AnimationManager.cpp  AnimationPipeline.cpp  Backpack.cpp  BaseBackground.cpp  Button.cpp  CheckBox.cpp  Classic_Map.cpp  CollectionAnimation.cpp  ControllerManager.cpp  DrawableConfigurator.cpp  ElementManager.cpp  Entity.cpp  EntityRegister.cpp  EventManager.cpp  FadeAnimation.cpp  FrameAnimation.cpp  FrameCounter.cpp  GraphicsManager.cpp  HealthBar.cpp  Hybrid_Map.cpp  IDrawableObject.cpp  ImageBoard.cpp  Item.cpp  ItemContainer.cpp  ItemManager.cpp  ItemSprite.cpp  MapManager.cpp  Mob.cpp  MoveAnimation.cpp  MultiImageBoard.cpp  OpenCore.cpp  OpenCore_impl.cpp  PackageManager_impl.cpp  PhysicalProperties.cpp  ResourceManager.cpp  RotateAnimation.cpp  ScaleAnimation.cpp  ScriptStage.cpp  Scrollbar.cpp  SettingsManager.cpp  (+21 more)
(+116 files in other folders)
